argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: road-helper
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: road-helper-web
